--- a/ProgettoElettrodomestici/Brunasso_Elettrodomestici/src/main/resources/org/brunasso_elettrodomestici/inserimento_prodotto.fxml
+++ b/ProgettoElettrodomestici/Brunasso_Elettrodomestici/src/main/resources/org/brunasso_elettrodomestici/inserimento_prodotto.fxml
@@ -8,7 +8,7 @@
 
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.brunasso_elettrodomestici.AdminController"
       spacing="20" alignment="CENTER"
-      style="-fx-background-color: #F7F9F9; -fx-font-family: 'Arial'; -fx-padding: 30;">
+      style="-fx-background-color: #F7F9F9; -fx-font-family: 'Times New Roman'; -fx-padding: 30;">
 
     <!-- Titolo -->
     <Text text="Inserisci Nuovo Prodotto"
@@ -73,7 +73,7 @@
     </VBox>
 
     <!-- Pulsante -->
-    <Button fx:id="addProductButton" text="Aggiungi Prodotto" onAction="#addProduct"
+    <Button fx:id="addProductButton" text="Aggiungi Prodotto" onAction="#addProductHandler"
             style="-fx-font-size: 18px; -fx-background-color: #2ECC71; -fx-text-fill: #FFFFFF; -fx-border-radius: 10; -fx-padding: 10 20;"/>
     <Text fx:id="addProductError" visible="false"
           style="-fx-font-size: 14px; -fx-fill: #E74C3C;"/>
