--- a/ProgettoElettrodomestici/Brunasso_Elettrodomestici/src/main/resources/org/brunasso_elettrodomestici/inserimento_prodotto.fxml
+++ b/ProgettoElettrodomestici/Brunasso_Elettrodomestici/src/main/resources/org/brunasso_elettrodomestici/inserimento_prodotto.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
@@ -8,7 +9,7 @@
 
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.brunasso_elettrodomestici.AdminController"
       spacing="20" alignment="CENTER"
-      style="-fx-background-color: #F7F9F9; -fx-font-family: 'Times New Roman'; -fx-padding: 30;">
+      style="-fx-background-color: #F7F9F9; -fx-font-family: 'Times New Roman'; -fx-padding: 30; -fx-alignment: center;">
 
     <!-- Titolo -->
     <Text text="Inserisci Nuovo Prodotto"
@@ -16,65 +17,67 @@
 
     <!-- Informazioni Prodotto -->
     <VBox spacing="15" alignment="CENTER">
-        <VBox spacing="10" alignment="CENTER">
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Codice Prodotto:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productCode" promptText="Inserisci il codice"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Nome Prodotto:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productName" promptText="Inserisci il nome"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Descrizione:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productDescription" promptText="Inserisci la descrizione"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Prezzo (€):"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productPrice" promptText="Inserisci il prezzo"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Marca:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productMarca" promptText="Inserisci la marca"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Categoria:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
-            <TextField fx:id="productCategoria" promptText="Inserisci la marca"
+            <TextField fx:id="productCategoria" promptText="Inserisci la categoria"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Quantità:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productQuantity" promptText="Inserisci la quantità"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Sconto (%):"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productSale" promptText="Inserisci lo sconto"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
-        <VBox spacing="10" alignment="CENTER">
+        </HBox>
+        <HBox spacing="10" alignment="CENTER">
             <Label text="Fornitore:"
                    style="-fx-font-size: 18px; -fx-text-fill: #34495E;"/>
             <TextField fx:id="productFornitore" promptText="Inserisci il fornitore"
                        style="-fx-font-size: 16px; -fx-background-color: #FFFFFF; -fx-border-color: #BDC3C7; -fx-border-radius: 5;"/>
-        </VBox>
+        </HBox>
     </VBox>
 
     <!-- Pulsante -->
     <Button fx:id="addProductButton" text="Aggiungi Prodotto" onAction="#addProductHandler"
-            style="-fx-font-size: 18px; -fx-background-color: #2ECC71; -fx-text-fill: #FFFFFF; -fx-border-radius: 10; -fx-padding: 10 20;"/>
+            style="-fx-font-size: 20px; -fx-background-color: #3498DB; -fx-text-fill: #FFFFFF; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 10 20 10 20;"/>
+    <Button fx:id="backToAdminMenuButton" text="Torna al Menu" onAction="#showMenuAdministrator"
+            style="-fx-font-size: 20px; -fx-background-color: #E74C3C; -fx-text-fill: #FFFFFF; -fx-border-radius: 10; -fx-background-radius: 10; -fx-padding: 10 20 10 20;"/>
     <Text fx:id="addProductError" visible="false"
           style="-fx-font-size: 14px; -fx-fill: #E74C3C;"/>
 </VBox>
